maint: describe policy on copyright year number ranges
* README: Mention coreutils' long-standing policy on use of M-N
ranges in copyright year lists.  Requested by Richard Stallman.

--- a/README
+++ b/README
@@ -124,6 +124,9 @@ team. zip and unzip are not associated with the GNU project.
 See http://info-zip.org/ for more about zip and unzip.
 
 
+For any copyright year range specified as YYYY-ZZZZ in this package
+note that the range specifies every single year in that closed interval.
+
 ========================================================================
 
 Copyright (C) 1999, 2001, 2002, 2006, 2007, 2009, 2010 Free Software
