--- a/NEWS
+++ b/NEWS
@@ -52,6 +52,8 @@ GNU gzip NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release 1.3.13 (2009-09-30) [stable]
 
+** 'gzip -f foo.gz' now creates a file foo.gz.gz instead of complaining.
+
 ** Bug fixes
 
   gzip -d no longer fails with "-" as 2nd or subsequent argument
@@ -64,8 +66,6 @@ GNU gzip NEWS                                    -*- outline -*-
 Major changes in Gzip 1.3.12 (2007-04-13)
 
 * znew now uses $TMPDIR (default /tmp) instead of always using /tmp.
-
-* 'gzip -f foo.gz' now creates a file foo.gz.gz instead of complaining.
 
 * It is now documented that gzip ignores case when examining file name
   extensions; for example, 'gzip test.Gz' (without -f) fails because
