--- a/README
+++ b/README
@@ -129,8 +129,8 @@ note that the range specifies every single year in that closed interval.
 
 ========================================================================
 
-Copyright (C) 1999, 2001, 2002, 2006, 2007, 2009, 2010 Free Software
-Foundation, Inc.
+Copyright (C) 1999, 2001-2002, 2006-2007, 2009-2011 Free Software Foundation,
+Inc.
 Copyright (C) 1992, 1993 Jean-loup Gailly
 
 Permission is granted to copy, distribute and/or modify this document
