maint: note that we'll remove amiga, atari, msdos, nt, os2, vms soon
If someone can show that any of these are being used, let us know.
* TODO: Note the plan to remove those directories this year.

--- a/TODO
+++ b/TODO
@@ -2,8 +2,9 @@ TODO file for gzip.
 
 Some of the planned features include:
 
-- Remove some of the old porting cruft, since we no longer support
-  PRIMOS etc. any more.
+- Remove some of the old porting cruft. since we no longer support
+  FIXME-2011: in mid to late 2011, remove the following directories:
+  amiga, atari, msdos, nt, os2, vms
 
 - Separate out the shell scripts like gzexe into a new little package;
   these scripts are less used and less reliable and should be optional.
