--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU gzip NEWS                                    -*- outline -*-
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 1.5 (2012-06-17) [stable]
 
 ** Bug fixes
 
