zgrep: handle a multi-digit context option like -15
* zgrep.in: Do not malfunction when given an option like -15.
Before, it could end up treating the pattern as a file name:

  $ echo x | gzip | zgrep -15 x
  gzip: x.gz: No such file or directory

* NEWS (Bug fixes): Mention it.
Reported by Dan Bloch via Thomas Bushnell in
https://bugs.launchpad.net/bugs/1032831

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,10 @@ GNU gzip NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  zgrep no longer malfunctions with a multi-digit context option like -15.
+  Now, it passes that option to grep (equivalent to -C15) just as it does
+  for single-digit options. [bug introduced in gzip-1.3.12]
+
   zmore now acts more like 'more', and is more portable to POSIXish hosts.
 
 
