--- a/gzip.1
+++ b/gzip.1
@@ -28,7 +28,7 @@ gzip, gunzip, zcat \- compress or expand files
 reduces the size of the named files using Lempel-Ziv coding (LZ77).
 Whenever possible,
 each file is replaced by one with the extension
-.B "\&.gz,"
+.BR "\&.gz" ,
 while keeping the same ownership modes, access and modification times.
 (The default extension is
 .B "\-gz"
@@ -65,7 +65,7 @@ Compressed files can be restored to their original form using
 or
 .I gunzip
 or
-.I zcat.
+.IR zcat .
 If the original name saved in the compressed file is not suitable for its
 file system, a new name is constructed from the original one to make it
 legal.
@@ -95,14 +95,19 @@ extension.
 .PP
 .I gunzip
 can currently decompress files created by
-.I gzip, zip, compress, compress -H
+.IR gzip ,
+.IR zip ,
+.IR compress ,
+.I "compress -H"
 or
-.I pack.
+.IR pack .
 The detection of the input format is automatic.  When using
 the first two formats,
 .I gunzip
 checks a 32 bit CRC. For
-.I pack, gunzip
+.I pack
+and
+.I gunzip
 checks the uncompressed length. The standard
 .I compress
 format was not designed to allow consistency checks. However
@@ -131,18 +136,18 @@ To extract zip files
 with several members, use
 .I unzip
 instead of
-.I gunzip.
+.IR gunzip .
 .PP
 .I zcat
 is identical to
 .I gunzip
-.B \-c.
+.BR \-c .
 (On some systems,
 .I zcat
 may be installed as
 .I gzcat
 to preserve the original link to
-.I compress.)
+.IR compress .)
 .I zcat
 uncompresses either a list of files on the command line or its
 standard input and writes the uncompressed data on standard output.
@@ -176,17 +181,6 @@ number of used disk blocks almost never increases.
 .I gzip
 preserves the mode, ownership and timestamps of files when compressing
 or decompressing.
-.PP
-The
-.I gzip
-file format is specified in P. Deutsch, \s-1GZIP\s0 file format
-specification version 4.3, <ftp://ftp.isi.edu/in-notes/rfc1952.txt>,
-Internet RFC 1952 (May 1996).  The
-.I zip
-deflation format is specified in P. Deutsch, \s-1DEFLATE\s0 Compressed
-Data Format Specification version 1.3,
-<ftp://ftp.isi.edu/in-notes/rfc1951.txt>, Internet RFC 1951 (May 1996).
-
 .SH OPTIONS
 .TP
 .B \-a --ascii
@@ -208,12 +202,12 @@ Force compression or decompression even if the file has multiple links
 or the corresponding file already exists, or if the compressed data
 is read from or written to a terminal. If the input data is not in
 a format recognized by
-.I gzip,
+.IR gzip ,
 and if the option --stdout is also given, copy the input data without change
 to the standard output: let
 .I zcat
 behave as
-.I cat.
+.IR cat .
 If
 .B \-f
 is not given,
@@ -298,8 +292,6 @@ are transferred to other systems.
 
 When decompressing, add .suf to the beginning of the list of
 suffixes to try, when deriving an output file name from an input file name.
-
-.IR pack "(1)".
 .TP
 .B \-t --test
 Test. Check the compressed file integrity.
@@ -372,7 +364,7 @@ replacement.
 The environment variable
 .B GZIP
 can hold a set of default options for
-.I gzip.
+.IR gzip .
 These options are interpreted first and can be overwritten by
 explicit command line parameters. For example:
       for sh:    GZIP="-8v --name"; export GZIP
@@ -382,20 +374,19 @@ explicit command line parameters. For example:
 On Vax/VMS, the name of the environment variable is GZIP_OPT, to
 avoid a conflict with the symbol set for invocation of the program.
 .SH "SEE ALSO"
-znew(1), zcmp(1), zmore(1), zforce(1), gzexe(1), zip(1), unzip(1), compress(1),
-pack(1), compact(1)
+znew(1), zcmp(1), zmore(1), zforce(1), gzexe(1), zip(1), unzip(1), compress(1)
 .PP
 The
 .I gzip
 file format is specified in P. Deutsch, \s-1GZIP\s0 file format
 specification version 4.3,
-.BR <ftp://ftp.isi.edu/in-notes/rfc1952.txt> ,
+.BR <http://www.ietf.org/rfc/rfc1952.txt> ,
 Internet RFC 1952 (May 1996).
 The
 .I zip
 deflation format is specified in P. Deutsch, \s-1DEFLATE\s0 Compressed
 Data Format Specification version 1.3,
-.BR <ftp://ftp.isi.edu/in-notes/rfc1951.txt> ,
+.BR <http://www.ietf.org/rfc/rfc1951.txt> ,
 Internet RFC 1951 (May 1996).
 .SH "DIAGNOSTICS"
 Exit status is normally 0;
@@ -487,9 +478,9 @@ In some rare cases, the --best option gives worse compression than
 the default compression level (-6). On some highly redundant files,
 .I compress
 compresses better than
-.I gzip.
+.IR gzip .
 .SH "COPYRIGHT NOTICE"
-Copyright \(co 1998, 1999, 2001, 2002 Free Software Foundation, Inc.
+Copyright \(co 1998, 1999, 2001, 2002, 2012 Free Software Foundation, Inc.
 .br
 Copyright \(co 1992, 1993 Jean-loup Gailly
 .PP
