--- a/zmore.1
+++ b/zmore.1
@@ -10,9 +10,10 @@ is a filter which allows examination of compressed or plain text files
 one screenful at a time on a soft-copy terminal.
 .I zmore
 works on files compressed with
-.I compress, pack
+.IR compress ,
+.I pack
 or
-.I gzip,
+.IR gzip ,
 and also on uncompressed files.
 If a file does not exist,
 .I zmore
@@ -33,9 +34,9 @@ and to determine the default window size.
 On a terminal capable of displaying 24 lines,
 the default window size is 22 lines.
 To use a pager other than the default
-.I more,
+.IR more ,
 set environment variable PAGER to the name of the desired program, such as
-.I less.
+.IR less .
 .PP
 Other sequences which may be typed when
 .I zmore
@@ -120,7 +121,7 @@ commands.
 If the standard output is not a teletype, then
 .I zmore
 acts just like
-.I zcat,
+.IR zcat ,
 except that a header is printed before each file
 if there is more than one file.
 .SH FILES
