--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU gzip NEWS                                    -*- outline -*-
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 1.6 (2013-06-09) [stable]
 
 ** New features
 
