--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@ GNU gzip NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  gzip -k -v no longer reports that files are replaced.
+  [bug present since the beginning]
+
 
 * Noteworthy changes in release 1.6 (2013-06-09) [stable]
 
@@ -19,9 +24,6 @@ GNU gzip NEWS                                    -*- outline -*-
   When overwriting, gzip no longer acts as if you typed "y" when you type "n",
   on some platforms when compiled with optimization.
   [bug introduced in gzip-1.3.6]
-
-  gzip -k -v no longer reports that files are replaced.
-  [bug present since the beginning]
 
   zgrep no longer malfunctions with a multi-digit context option like -15.
   Now, it passes that option to grep (equivalent to -C15) just as it does
