maint: update copyright year ranges to include 2015; update gnulib

--- a/zless.1
+++ b/zless.1
@@ -28,7 +28,7 @@ To read compressed data from a pipe, you can use
 instead of
 .RB ".\|.\|." "|zless" .
 .SH "COPYRIGHT NOTICE"
-Copyright \(co 2006, 2007 Free Software Foundation, Inc.
+Copyright \(co 2006-2007, 2015 Free Software Foundation, Inc.
 .br
 Copyright \(co 1992, 1993 Jean-loup Gailly
 .PP
