--- a/doc/gzip.texi
+++ b/doc/gzip.texi
@@ -12,7 +12,7 @@ This manual is for GNU Gzip
 (version @value{VERSION}, @value{UPDATED}),
 and documents commands for compressing and decompressing data.
 
-Copyright @copyright{} 1998--1999, 2001--2002, 2006--2007, 2009--2014
+Copyright @copyright{} 1998-1999, 2001-2002, 2006-2007, 2009-2015
 Free Software Foundation, Inc.
 
 Copyright @copyright{} 1992, 1993 Jean-loup Gailly
