--- a/gzip.1
+++ b/gzip.1
@@ -483,7 +483,7 @@ the default compression level (-6). On some highly redundant files,
 compresses better than
 .IR gzip .
 .SH "COPYRIGHT NOTICE"
-Copyright \(co 1998, 1999, 2001, 2002, 2012 Free Software Foundation, Inc.
+Copyright \(co 1998-1999, 2001-2002, 2012, 2015 Free Software Foundation, Inc.
 .br
 Copyright \(co 1992, 1993 Jean-loup Gailly
 .PP
